--- a/.cproject
+++ b/.cproject
@@ -21,6 +21,15 @@
 							<builder buildPath="${workspace_loc:/ArduinoCore}/Release" id="de.innot.avreclipse.target.builder.winavr.lib.release.1995884356" keepEnvironmentInBuildfile="false" managedBuildOn="true" name="AVR GNU Make Builder" superClass="de.innot.avreclipse.target.builder.winavr.lib.release"/>
 							<tool id="de.innot.avreclipse.tool.assembler.winavr.lib.release.2109413333" name="AVR Assembler" superClass="de.innot.avreclipse.tool.assembler.winavr.lib.release">
 								<option id="de.innot.avreclipse.assembler.option.debug.level.847808346" name="Generate Debugging Info" superClass="de.innot.avreclipse.assembler.option.debug.level" value="de.innot.avreclipse.assembler.option.debug.level.none" valueType="enumerated"/>
+								<option id="de.innot.avreclipse.asm.option.omitfcpu.1204774900" name="Omit F_CPU" superClass="de.innot.avreclipse.asm.option.omitfcpu" value="false" valueType="boolean"/>
+								<option id="de.innot.avreclipse.asm.option.usecpp.1080149276" name="Use preprocessor" superClass="de.innot.avreclipse.asm.option.usecpp" value="true" valueType="boolean"/>
+								<option id="de.innot.avreclipse.asm.option.include.paths.447804410" name="#include paths for preprocessor(-I)" superClass="de.innot.avreclipse.asm.option.include.paths" valueType="includePath">
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}}&quot;"/>
+								</option>
+								<option id="de.innot.avreclipse.asm.option.include.gaspaths.1922762222" name=".include paths for assembler(-Wa,-I)" superClass="de.innot.avreclipse.asm.option.include.gaspaths" valueType="includePath">
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}}&quot;"/>
+								</option>
+								<option id="de.innot.avreclipse.asm.option.flags.459911277" superClass="de.innot.avreclipse.asm.option.flags" value="" valueType="string"/>
 								<inputType id="de.innot.avreclipse.tool.assembler.input.1584494624" superClass="de.innot.avreclipse.tool.assembler.input"/>
 							</tool>
 							<tool id="de.innot.avreclipse.tool.compiler.winavr.lib.release.795236369" name="AVR Compiler" superClass="de.innot.avreclipse.tool.compiler.winavr.lib.release">
@@ -48,6 +57,30 @@
 							<tool id="de.innot.avreclipse.tool.archiver.winavr.lib.release.939888516" name="AVR Archiver" superClass="de.innot.avreclipse.tool.archiver.winavr.lib.release"/>
 							<tool id="de.innot.avreclipse.tool.objdump.winavr.lib.release.1869599551" name="AVR Create Extended Listing" superClass="de.innot.avreclipse.tool.objdump.winavr.lib.release"/>
 							<tool id="de.innot.avreclipse.tool.size.winavr.lib.release.726767771" name="Print Size" superClass="de.innot.avreclipse.tool.size.winavr.lib.release"/>
+						</toolChain>
+					</folderInfo>
+					<folderInfo id="de.innot.avreclipse.configuration.lib.release.1727910975.1844953528" name="/" resourcePath="Release">
+						<toolChain id="de.innot.avreclipse.toolchain.winavr.lib.release.948314376" name="AVR-GCC Toolchain" superClass="de.innot.avreclipse.toolchain.winavr.lib.release" unusedChildren="">
+							<option id="de.innot.avreclipse.toolchain.options.toolchain.objdump.lib.release.930173009.2084142725" name="Generate Extended Listing (Source + generated Assembler)" superClass="de.innot.avreclipse.toolchain.options.toolchain.objdump.lib.release.930173009"/>
+							<option id="de.innot.avreclipse.toolchain.options.toolchain.size.lib.release.51249640.1117268335" name="Print Size" superClass="de.innot.avreclipse.toolchain.options.toolchain.size.lib.release.51249640"/>
+							<targetPlatform id="de.innot.avreclipse.targetplatform.winavr.lib.release" name="AVR Cross-Target" superClass="de.innot.avreclipse.targetplatform.winavr.lib.release"/>
+							<tool id="de.innot.avreclipse.tool.assembler.winavr.lib.release.2105232381" name="AVR Assembler" superClass="de.innot.avreclipse.tool.assembler.winavr.lib.release.2109413333">
+								<option id="de.innot.avreclipse.asm.option.include.gaspaths.873267588" name=".include paths for assembler(-Wa,-I)" superClass="de.innot.avreclipse.asm.option.include.gaspaths" valueType="includePath">
+									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}}&quot;"/>
+								</option>
+								<inputType id="de.innot.avreclipse.tool.assembler.input.292722551" superClass="de.innot.avreclipse.tool.assembler.input"/>
+							</tool>
+							<tool id="de.innot.avreclipse.tool.compiler.winavr.lib.release.1442757574" name="AVR Compiler" superClass="de.innot.avreclipse.tool.compiler.winavr.lib.release.795236369">
+								<inputType id="de.innot.avreclipse.compiler.winavr.input.1984794254" name="C Source Files" superClass="de.innot.avreclipse.compiler.winavr.input"/>
+							</tool>
+							<tool id="de.innot.avreclipse.tool.cppcompiler.lib.release.60399076" name="AVR C++ Compiler" superClass="de.innot.avreclipse.tool.cppcompiler.lib.release.147384885">
+								<inputType id="de.innot.avreclipse.cppcompiler.input.511525407" superClass="de.innot.avreclipse.cppcompiler.input"/>
+							</tool>
+							<tool id="de.innot.avreclipse.tool.linker.winavr.base.1954809809" name="AVR C Linker" superClass="de.innot.avreclipse.tool.linker.winavr.base.842627822"/>
+							<tool id="de.innot.avreclipse.tool.cpplinker.base.1077897743" name="AVR C++ Linker" superClass="de.innot.avreclipse.tool.cpplinker.base.281853822"/>
+							<tool id="de.innot.avreclipse.tool.archiver.winavr.lib.release.2038817082" name="AVR Archiver" superClass="de.innot.avreclipse.tool.archiver.winavr.lib.release.939888516"/>
+							<tool id="de.innot.avreclipse.tool.objdump.winavr.lib.release.894853581" name="AVR Create Extended Listing" superClass="de.innot.avreclipse.tool.objdump.winavr.lib.release.1869599551"/>
+							<tool id="de.innot.avreclipse.tool.size.winavr.lib.release.661107838" name="Print Size" superClass="de.innot.avreclipse.tool.size.winavr.lib.release.726767771"/>
 						</toolChain>
 					</folderInfo>
 				</configuration>
