--- a/.cproject
+++ b/.cproject
@@ -8,20 +8,21 @@
 					<extension id="org.eclipse.cdt.core.MakeErrorParser" point="org.eclipse.cdt.core.ErrorParser"/>
 					<extension id="org.eclipse.cdt.core.GCCErrorParser" point="org.eclipse.cdt.core.ErrorParser"/>
 					<extension id="org.eclipse.cdt.core.GASErrorParser" point="org.eclipse.cdt.core.ErrorParser"/>
+					<extension id="org.eclipse.cdt.core.GLDErrorParser" point="org.eclipse.cdt.core.ErrorParser"/>
 					<extension id="org.eclipse.cdt.core.ELF" point="org.eclipse.cdt.core.BinaryParser"/>
 				</extensions>
 			</storageModule>
 			<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-				<configuration artifactExtension="a" artifactName="${ProjName}" buildArtefactType="de.innot.avreclipse.buildArtefactType.staticLib" buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release,org.eclipse.cdt.build.core.buildArtefactType=de.innot.avreclipse.buildArtefactType.staticLib" cleanCommand="rm -rf" description="" id="de.innot.avreclipse.configuration.lib.release.1727910975" name="Release" parent="de.innot.avreclipse.configuration.lib.release">
+				<configuration artifactExtension="a" artifactName="${ProjName}" buildArtefactType="de.innot.avreclipse.buildArtefactType.staticLib" buildProperties="org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.release,org.eclipse.cdt.build.core.buildArtefactType=de.innot.avreclipse.buildArtefactType.staticLib" cleanCommand="rm -rf" description="" errorParsers="org.eclipse.cdt.core.MakeErrorParser;org.eclipse.cdt.core.GCCErrorParser;org.eclipse.cdt.core.GASErrorParser;org.eclipse.cdt.core.GLDErrorParser" id="de.innot.avreclipse.configuration.lib.release.1727910975" name="Release" parent="de.innot.avreclipse.configuration.lib.release" postbuildStep="">
 					<folderInfo id="de.innot.avreclipse.configuration.lib.release.1727910975." name="/" resourcePath="">
-						<toolChain id="de.innot.avreclipse.toolchain.winavr.lib.release.299437693" name="AVR-GCC Toolchain" superClass="de.innot.avreclipse.toolchain.winavr.lib.release">
+						<toolChain errorParsers="" id="de.innot.avreclipse.toolchain.winavr.lib.release.299437693" name="AVR-GCC Toolchain" superClass="de.innot.avreclipse.toolchain.winavr.lib.release">
 							<option id="de.innot.avreclipse.toolchain.options.toolchain.objdump.lib.release.930173009" name="Generate Extended Listing (Source + generated Assembler)" superClass="de.innot.avreclipse.toolchain.options.toolchain.objdump.lib.release"/>
 							<option id="de.innot.avreclipse.toolchain.options.toolchain.size.lib.release.51249640" name="Print Size" superClass="de.innot.avreclipse.toolchain.options.toolchain.size.lib.release"/>
 							<targetPlatform id="de.innot.avreclipse.targetplatform.winavr.lib.release.1548004357" name="AVR Cross-Target" superClass="de.innot.avreclipse.targetplatform.winavr.lib.release"/>
-							<builder buildPath="${workspace_loc:/ArduinoCore}/Release" id="de.innot.avreclipse.target.builder.winavr.lib.release.1995884356" keepEnvironmentInBuildfile="false" managedBuildOn="true" name="AVR GNU Make Builder" superClass="de.innot.avreclipse.target.builder.winavr.lib.release"/>
-							<tool id="de.innot.avreclipse.tool.assembler.winavr.lib.release.2109413333" name="AVR Assembler" superClass="de.innot.avreclipse.tool.assembler.winavr.lib.release">
-								<option id="de.innot.avreclipse.assembler.option.debug.level.847808346" name="Generate Debugging Info" superClass="de.innot.avreclipse.assembler.option.debug.level" value="de.innot.avreclipse.assembler.option.debug.level.none" valueType="enumerated"/>
-								<option id="de.innot.avreclipse.asm.option.omitfcpu.1204774900" name="Omit F_CPU" superClass="de.innot.avreclipse.asm.option.omitfcpu" value="false" valueType="boolean"/>
+							<builder buildPath="${workspace_loc:/ArduinoCore}/Release" errorParsers="org.eclipse.cdt.core.MakeErrorParser" id="de.innot.avreclipse.target.builder.winavr.lib.release.1995884356" keepEnvironmentInBuildfile="false" managedBuildOn="true" name="AVR GNU Make Builder" superClass="de.innot.avreclipse.target.builder.winavr.lib.release"/>
+							<tool errorParsers="org.eclipse.cdt.core.GASErrorParser" id="de.innot.avreclipse.tool.assembler.winavr.lib.release.2109413333" name="AVR Assembler" superClass="de.innot.avreclipse.tool.assembler.winavr.lib.release">
+								<option id="de.innot.avreclipse.assembler.option.debug.level.847808346" name="Generate Debugging Info" superClass="de.innot.avreclipse.assembler.option.debug.level" value="de.innot.avreclipse.assembler.option.debug.level.g2" valueType="enumerated"/>
+								<option id="de.innot.avreclipse.asm.option.omitfcpu.1204774900" name="Omit F_CPU" superClass="de.innot.avreclipse.asm.option.omitfcpu" value="true" valueType="boolean"/>
 								<option id="de.innot.avreclipse.asm.option.usecpp.1080149276" name="Use preprocessor" superClass="de.innot.avreclipse.asm.option.usecpp" value="true" valueType="boolean"/>
 								<option id="de.innot.avreclipse.asm.option.include.paths.447804410" name="#include paths for preprocessor(-I)" superClass="de.innot.avreclipse.asm.option.include.paths" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}}&quot;"/>
@@ -29,10 +30,11 @@
 								<option id="de.innot.avreclipse.asm.option.include.gaspaths.1922762222" name=".include paths for assembler(-Wa,-I)" superClass="de.innot.avreclipse.asm.option.include.gaspaths" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}}&quot;"/>
 								</option>
-								<option id="de.innot.avreclipse.asm.option.flags.459911277" superClass="de.innot.avreclipse.asm.option.flags" value="" valueType="string"/>
+								<option id="de.innot.avreclipse.asm.option.flags.459911277" name="Other GCC Flags" superClass="de.innot.avreclipse.asm.option.flags" value="" valueType="string"/>
+								<option id="de.innot.avreclipse.asm.option.warnings.nowarn.1334196344" superClass="de.innot.avreclipse.asm.option.warnings.nowarn" value="true" valueType="boolean"/>
 								<inputType id="de.innot.avreclipse.tool.assembler.input.1584494624" superClass="de.innot.avreclipse.tool.assembler.input"/>
 							</tool>
-							<tool id="de.innot.avreclipse.tool.compiler.winavr.lib.release.795236369" name="AVR Compiler" superClass="de.innot.avreclipse.tool.compiler.winavr.lib.release">
+							<tool errorParsers="org.eclipse.cdt.core.GCCErrorParser" id="de.innot.avreclipse.tool.compiler.winavr.lib.release.795236369" name="AVR Compiler" superClass="de.innot.avreclipse.tool.compiler.winavr.lib.release">
 								<option id="de.innot.avreclipse.compiler.option.debug.level.1353155307" name="Generate Debugging Info" superClass="de.innot.avreclipse.compiler.option.debug.level" value="de.innot.avreclipse.compiler.option.debug.level.none" valueType="enumerated"/>
 								<option id="de.innot.avreclipse.compiler.option.optimize.2067477005" name="Optimization Level" superClass="de.innot.avreclipse.compiler.option.optimize" value="de.innot.avreclipse.compiler.optimize.size" valueType="enumerated"/>
 								<option id="de.innot.avreclipse.compiler.option.incpath.797718721" name="Include Paths (-I)" superClass="de.innot.avreclipse.compiler.option.incpath" valueType="includePath">
@@ -41,7 +43,7 @@
 								</option>
 								<inputType id="de.innot.avreclipse.compiler.winavr.input.1337793332" name="C Source Files" superClass="de.innot.avreclipse.compiler.winavr.input"/>
 							</tool>
-							<tool id="de.innot.avreclipse.tool.cppcompiler.lib.release.147384885" name="AVR C++ Compiler" superClass="de.innot.avreclipse.tool.cppcompiler.lib.release">
+							<tool errorParsers="org.eclipse.cdt.core.GCCErrorParser" id="de.innot.avreclipse.tool.cppcompiler.lib.release.147384885" name="AVR C++ Compiler" superClass="de.innot.avreclipse.tool.cppcompiler.lib.release">
 								<option id="de.innot.avreclipse.cppcompiler.option.debug.level.626843235" name="Generate Debugging Info" superClass="de.innot.avreclipse.cppcompiler.option.debug.level" value="de.innot.avreclipse.cppcompiler.option.debug.level.none" valueType="enumerated"/>
 								<option id="de.innot.avreclipse.cppcompiler.option.optimize.1578904570" name="Optimization Level" superClass="de.innot.avreclipse.cppcompiler.option.optimize" value="de.innot.avreclipse.cppcompiler.optimize.size" valueType="enumerated"/>
 								<option id="de.innot.avreclipse.cppcompiler.option.incpath.148338935" name="Include Paths (-I)" superClass="de.innot.avreclipse.cppcompiler.option.incpath" valueType="includePath">
@@ -54,33 +56,33 @@
 							</tool>
 							<tool id="de.innot.avreclipse.tool.linker.winavr.base.842627822" name="AVR C Linker" superClass="de.innot.avreclipse.tool.linker.winavr.base"/>
 							<tool id="de.innot.avreclipse.tool.cpplinker.base.281853822" name="AVR C++ Linker" superClass="de.innot.avreclipse.tool.cpplinker.base"/>
-							<tool id="de.innot.avreclipse.tool.archiver.winavr.lib.release.939888516" name="AVR Archiver" superClass="de.innot.avreclipse.tool.archiver.winavr.lib.release"/>
-							<tool id="de.innot.avreclipse.tool.objdump.winavr.lib.release.1869599551" name="AVR Create Extended Listing" superClass="de.innot.avreclipse.tool.objdump.winavr.lib.release"/>
-							<tool id="de.innot.avreclipse.tool.size.winavr.lib.release.726767771" name="Print Size" superClass="de.innot.avreclipse.tool.size.winavr.lib.release"/>
+							<tool errorParsers="" id="de.innot.avreclipse.tool.archiver.winavr.lib.release.939888516" name="AVR Archiver" superClass="de.innot.avreclipse.tool.archiver.winavr.lib.release"/>
+							<tool errorParsers="" id="de.innot.avreclipse.tool.objdump.winavr.lib.release.1869599551" name="AVR Create Extended Listing" superClass="de.innot.avreclipse.tool.objdump.winavr.lib.release"/>
+							<tool errorParsers="" id="de.innot.avreclipse.tool.size.winavr.lib.release.726767771" name="Print Size" superClass="de.innot.avreclipse.tool.size.winavr.lib.release"/>
 						</toolChain>
 					</folderInfo>
 					<folderInfo id="de.innot.avreclipse.configuration.lib.release.1727910975.1844953528" name="/" resourcePath="Release">
-						<toolChain id="de.innot.avreclipse.toolchain.winavr.lib.release.948314376" name="AVR-GCC Toolchain" superClass="de.innot.avreclipse.toolchain.winavr.lib.release" unusedChildren="">
+						<toolChain errorParsers="" id="de.innot.avreclipse.toolchain.winavr.lib.release.948314376" name="AVR-GCC Toolchain" superClass="de.innot.avreclipse.toolchain.winavr.lib.release" unusedChildren="">
 							<option id="de.innot.avreclipse.toolchain.options.toolchain.objdump.lib.release.930173009.2084142725" name="Generate Extended Listing (Source + generated Assembler)" superClass="de.innot.avreclipse.toolchain.options.toolchain.objdump.lib.release.930173009"/>
 							<option id="de.innot.avreclipse.toolchain.options.toolchain.size.lib.release.51249640.1117268335" name="Print Size" superClass="de.innot.avreclipse.toolchain.options.toolchain.size.lib.release.51249640"/>
 							<targetPlatform id="de.innot.avreclipse.targetplatform.winavr.lib.release" name="AVR Cross-Target" superClass="de.innot.avreclipse.targetplatform.winavr.lib.release"/>
-							<tool id="de.innot.avreclipse.tool.assembler.winavr.lib.release.2105232381" name="AVR Assembler" superClass="de.innot.avreclipse.tool.assembler.winavr.lib.release.2109413333">
+							<tool errorParsers="org.eclipse.cdt.core.GASErrorParser" id="de.innot.avreclipse.tool.assembler.winavr.lib.release.2105232381" name="AVR Assembler" superClass="de.innot.avreclipse.tool.assembler.winavr.lib.release.2109413333">
 								<option id="de.innot.avreclipse.asm.option.include.gaspaths.873267588" name=".include paths for assembler(-Wa,-I)" superClass="de.innot.avreclipse.asm.option.include.gaspaths" valueType="includePath">
 									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}}&quot;"/>
 								</option>
 								<inputType id="de.innot.avreclipse.tool.assembler.input.292722551" superClass="de.innot.avreclipse.tool.assembler.input"/>
 							</tool>
-							<tool id="de.innot.avreclipse.tool.compiler.winavr.lib.release.1442757574" name="AVR Compiler" superClass="de.innot.avreclipse.tool.compiler.winavr.lib.release.795236369">
+							<tool errorParsers="org.eclipse.cdt.core.GCCErrorParser" id="de.innot.avreclipse.tool.compiler.winavr.lib.release.1442757574" name="AVR Compiler" superClass="de.innot.avreclipse.tool.compiler.winavr.lib.release.795236369">
 								<inputType id="de.innot.avreclipse.compiler.winavr.input.1984794254" name="C Source Files" superClass="de.innot.avreclipse.compiler.winavr.input"/>
 							</tool>
-							<tool id="de.innot.avreclipse.tool.cppcompiler.lib.release.60399076" name="AVR C++ Compiler" superClass="de.innot.avreclipse.tool.cppcompiler.lib.release.147384885">
+							<tool errorParsers="org.eclipse.cdt.core.GCCErrorParser" id="de.innot.avreclipse.tool.cppcompiler.lib.release.60399076" name="AVR C++ Compiler" superClass="de.innot.avreclipse.tool.cppcompiler.lib.release.147384885">
 								<inputType id="de.innot.avreclipse.cppcompiler.input.511525407" superClass="de.innot.avreclipse.cppcompiler.input"/>
 							</tool>
 							<tool id="de.innot.avreclipse.tool.linker.winavr.base.1954809809" name="AVR C Linker" superClass="de.innot.avreclipse.tool.linker.winavr.base.842627822"/>
 							<tool id="de.innot.avreclipse.tool.cpplinker.base.1077897743" name="AVR C++ Linker" superClass="de.innot.avreclipse.tool.cpplinker.base.281853822"/>
 							<tool id="de.innot.avreclipse.tool.archiver.winavr.lib.release.2038817082" name="AVR Archiver" superClass="de.innot.avreclipse.tool.archiver.winavr.lib.release.939888516"/>
-							<tool id="de.innot.avreclipse.tool.objdump.winavr.lib.release.894853581" name="AVR Create Extended Listing" superClass="de.innot.avreclipse.tool.objdump.winavr.lib.release.1869599551"/>
-							<tool id="de.innot.avreclipse.tool.size.winavr.lib.release.661107838" name="Print Size" superClass="de.innot.avreclipse.tool.size.winavr.lib.release.726767771"/>
+							<tool errorParsers="" id="de.innot.avreclipse.tool.objdump.winavr.lib.release.894853581" name="AVR Create Extended Listing" superClass="de.innot.avreclipse.tool.objdump.winavr.lib.release.1869599551"/>
+							<tool errorParsers="" id="de.innot.avreclipse.tool.size.winavr.lib.release.661107838" name="Print Size" superClass="de.innot.avreclipse.tool.size.winavr.lib.release.726767771"/>
 						</toolChain>
 					</folderInfo>
 				</configuration>
