--- a/.cproject
+++ b/.cproject
@@ -71,30 +71,6 @@
 							<tool errorParsers="" id="de.innot.avreclipse.tool.size.winavr.lib.release.726767771" name="Print Size" superClass="de.innot.avreclipse.tool.size.winavr.lib.release"/>
 						</toolChain>
 					</folderInfo>
-					<folderInfo id="de.innot.avreclipse.configuration.lib.release.1727910975.1844953528" name="/" resourcePath="Release">
-						<toolChain errorParsers="" id="de.innot.avreclipse.toolchain.winavr.lib.release.948314376" name="AVR-GCC Toolchain" superClass="de.innot.avreclipse.toolchain.winavr.lib.release" unusedChildren="">
-							<option id="de.innot.avreclipse.toolchain.options.toolchain.objdump.lib.release.930173009.2084142725" name="Generate Extended Listing (Source + generated Assembler)" superClass="de.innot.avreclipse.toolchain.options.toolchain.objdump.lib.release.930173009"/>
-							<option id="de.innot.avreclipse.toolchain.options.toolchain.size.lib.release.51249640.1117268335" name="Print Size" superClass="de.innot.avreclipse.toolchain.options.toolchain.size.lib.release.51249640"/>
-							<targetPlatform id="de.innot.avreclipse.targetplatform.winavr.lib.release" name="AVR Cross-Target" superClass="de.innot.avreclipse.targetplatform.winavr.lib.release"/>
-							<tool errorParsers="org.eclipse.cdt.core.GASErrorParser" id="de.innot.avreclipse.tool.assembler.winavr.lib.release.2105232381" name="AVR Assembler" superClass="de.innot.avreclipse.tool.assembler.winavr.lib.release.2109413333">
-								<option id="de.innot.avreclipse.asm.option.include.gaspaths.873267588" name=".include paths for assembler(-Wa,-I)" superClass="de.innot.avreclipse.asm.option.include.gaspaths" valueType="includePath">
-									<listOptionValue builtIn="false" value="&quot;${workspace_loc:/${ProjName}}&quot;"/>
-								</option>
-								<inputType id="de.innot.avreclipse.tool.assembler.input.292722551" superClass="de.innot.avreclipse.tool.assembler.input"/>
-							</tool>
-							<tool errorParsers="org.eclipse.cdt.core.GCCErrorParser" id="de.innot.avreclipse.tool.compiler.winavr.lib.release.1442757574" name="AVR Compiler" superClass="de.innot.avreclipse.tool.compiler.winavr.lib.release.795236369">
-								<inputType id="de.innot.avreclipse.compiler.winavr.input.1984794254" name="C Source Files" superClass="de.innot.avreclipse.compiler.winavr.input"/>
-							</tool>
-							<tool errorParsers="org.eclipse.cdt.core.GCCErrorParser" id="de.innot.avreclipse.tool.cppcompiler.lib.release.60399076" name="AVR C++ Compiler" superClass="de.innot.avreclipse.tool.cppcompiler.lib.release.147384885">
-								<inputType id="de.innot.avreclipse.cppcompiler.input.511525407" superClass="de.innot.avreclipse.cppcompiler.input"/>
-							</tool>
-							<tool id="de.innot.avreclipse.tool.linker.winavr.base.1954809809" name="AVR C Linker" superClass="de.innot.avreclipse.tool.linker.winavr.base.842627822"/>
-							<tool id="de.innot.avreclipse.tool.cpplinker.base.1077897743" name="AVR C++ Linker" superClass="de.innot.avreclipse.tool.cpplinker.base.281853822"/>
-							<tool id="de.innot.avreclipse.tool.archiver.winavr.lib.release.2038817082" name="AVR Archiver" superClass="de.innot.avreclipse.tool.archiver.winavr.lib.release.939888516"/>
-							<tool errorParsers="" id="de.innot.avreclipse.tool.objdump.winavr.lib.release.894853581" name="AVR Create Extended Listing" superClass="de.innot.avreclipse.tool.objdump.winavr.lib.release.1869599551"/>
-							<tool errorParsers="" id="de.innot.avreclipse.tool.size.winavr.lib.release.661107838" name="Print Size" superClass="de.innot.avreclipse.tool.size.winavr.lib.release.726767771"/>
-						</toolChain>
-					</folderInfo>
 				</configuration>
 			</storageModule>
 			<storageModule moduleId="org.eclipse.cdt.core.externalSettings"/>
@@ -119,4 +95,5 @@
 		</configuration>
 	</storageModule>
 	<storageModule moduleId="org.eclipse.cdt.internal.ui.text.commentOwnerProjectMappings"/>
+	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
 </cproject>
